--- a/Front-end/Pages/Entrar.razor
+++ b/Front-end/Pages/Entrar.razor
@@ -14,7 +14,7 @@
     
         <h1 class="display-5 weight-700">Entrar</h1>
     
-        <p class="paragraph-size weight-500">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+        <p class="paragraph-size weight-500">Insira seus dados de login para acessar o sistema de agendamento de serviços acadêmicos.</p>
     
         <EditForm Model="@user" OnValidSubmit="@Login">
         <DataAnnotationsValidator />
@@ -52,7 +52,7 @@
             <hr style="flex-grow: 1; border: none; border-top: 1px solid #D9D9D9; margin: 0 10px;">
         </div>
     
-        <p class="paragraph-size weight-500">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+        <p class="paragraph-size weight-500">Não tem uma conta? Cadastre-se e tenha acesso aos serviços especializados da Ufersa.</p>
     
         <div class="d-grid gap-2 py-2">
             <a href="/cadastrar" class="btn btn-secondary weight-700 px24 border-radius-30 a-button">Cadastre-se Agora</a>
