--- a/Front-end/wwwroot/css/app.css
+++ b/Front-end/wwwroot/css/app.css
@@ -396,3 +396,74 @@ code {
     font-size: 1.375rem; 
     font-weight: 600;
 }
+
+#opacidade{
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    z-index: 999;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+}
+
+.termos-politicas-container{
+    display: none;
+    width: 66rem;
+    height: 40rem;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    z-index: 1000;
+    border-radius: 20px;
+    padding: 32px;
+}
+
+.termos-politicas-header{
+    display: flex;
+    align-items: flex-start;
+}
+
+.termos-politicas-h1{
+    font-size: 2.625rem;
+    font-weight: 800;
+}
+
+.termos-politicas-h2{
+    font-size: 1.1rem;
+    font-weight: 300;
+    color: #CCCCCC;
+}
+
+.termos-politicas-sec{
+    height: 28.875rem;
+    font-size: 1.1rem;
+    font-weight: 500;
+    color: #000000;
+    padding: 36px 32px 36px 64px;
+    margin-right: 32px;
+    overflow: auto; 
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #CCCCCC; 
+    border-radius: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #EEEEEE; 
+    border-radius: 8px; 
+}
+
+.termos-politicas-sec > ol > li{
+    padding: 20px 0px 0px 0px;
+}
+
+.termos-politicas-sec ul{
+    padding: 20px 0px 0px 20px;
+}
