--- a/Front-end/Layout/CalendarioDiario.razor
+++ b/Front-end/Layout/CalendarioDiario.razor
@@ -30,8 +30,26 @@
                         {
                             <td title="@eventItem.Title">
                                 <div class="event" style="background-color:@eventItem.Colors[0]; color: @eventItem.Colors[1]; border-color: @eventItem.Colors[2];">
-                                    <div class="event-title">@eventItem.Title</div>
-                                    <div class="event-person">@eventItem.Person</div>
+                                    <div style="display: flex; padding: 10px 0px;">
+                                        <div class="event-title">@eventItem.Title</div>
+                                        <div class="event-title">&nbsp;| @eventItem.Person</div>
+                                    </div>
+                                    <div class="event-time" style="display: flex; align-items: center;">
+                                        <svg width="1rem" height="1rem" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <g clip-path="url(#clip0_1083_1911)">
+                                            <path d="M8.00016 14.6666C11.6821 14.6666 14.6668 11.6818 14.6668 7.99992C14.6668 4.31802 11.6821 1.33325 8.00016 1.33325C4.31826 1.33325 1.3335 4.31802 1.3335 7.99992C1.3335 11.6818 4.31826 14.6666 8.00016 14.6666Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                            <path d="M8.00016 4V8L5.3335 9.33333" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                            </g>
+                                            <defs>
+                                            <clipPath id="clip0_1083_1911">
+                                            <rect width="1rem" height="1rem" fill="white"/>
+                                            </clipPath>
+                                            </defs>
+                                        </svg>
+                                        <span style="padding-left: 5px;">
+                                            @eventItem.TimeInicio - @eventItem.TimeFim
+                                        </span>
+                                    </div>
                                 </div>
                             </td>
                         }
@@ -68,8 +86,10 @@
 
         if (compromissos != null && compromissos.Count > 0){
             foreach(var compromisso in compromissos){
-                TimeSpan hora = @compromisso.HoraInicio;
-                string horaFormatada = (hora.Hours % 12).ToString("D2") + ":" + hora.Minutes.ToString("D2") + " " + (hora.Hours >= 12 ? "PM" : "AM");
+                TimeSpan horaInicio = @compromisso.HoraInicio;
+                string horaFormatadaInicio = (horaInicio.Hours % 12).ToString("D2") + ":" + horaInicio.Minutes.ToString("D2") + " " + (horaInicio.Hours >= 12 ? "PM" : "AM");
+                TimeSpan horaFim = @compromisso.HoraFim;
+                string horaFormatadaFim = (horaFim.Hours % 12).ToString("D2") + ":" + horaFim.Minutes.ToString("D2") + " " + (horaFim.Hours >= 12 ? "PM" : "AM");
                 List<string> colors = new List<string>();
 
                 if(compromisso.Servico == "Psicóloga" || compromisso.Servico == "Psicólogo" || compromisso.Servico == "Psicóloga(o)" || compromisso.Servico == "Psicólogo(a)"){
@@ -82,19 +102,20 @@
                     colors = new List<string> (orange);
                 }
 
-                var evento = new EventItem { Day = compromisso.Data, Time = horaFormatada, Title = compromisso.Servico, Person = compromisso.Profissional_Nome, Colors = colors };
+                var evento = new EventItem { Day = compromisso.Data, TimeInicio = horaFormatadaInicio, TimeFim = horaFormatadaFim, Title = compromisso.Servico, Person = compromisso.Profissional_Nome, Colors = colors };
                 Events.Add(evento);
             }
 
         }
     }
 
-    private EventItem GetEventForDayAndTime(DateTime day, string time) => Events.FirstOrDefault(e => e.Day.Date == day.Date && e.Time == time);
+    private EventItem GetEventForDayAndTime(DateTime day, string time) => Events.FirstOrDefault(e => e.Day.Date == day.Date && e.TimeInicio == time);
 
     private class EventItem
     {
         public DateTime Day { get; set; }
-        public string Time { get; set; }
+        public string TimeInicio { get; set; }
+        public string TimeFim { get; set; }
         public string Title { get; set; }
         public string Person { get; set; }
         public List<string> Colors { get; set; }
@@ -174,7 +195,7 @@
         font-weight: 700;
     }
 
-    .event-person {
+    .event-time {
         font-size: 0.5em;
         font-weight: 500;
     }
