<refactor>: adição textual e redirecionamento

--- a/Front-end/Pages/Inicio.razor
+++ b/Front-end/Pages/Inicio.razor
@@ -23,8 +23,8 @@
 
                         <div class="content-div" style="padding: 15px 20px; width: 23.375rem;">
                             <p class="paragraph-size weight-700" style="color: var(--black-gray);">UFERSA</p>
-                            <h1 class="px46" style="color: var(--white);">Lorem Ipsum is simply </h1>
-                            <p class="paragraph-size weight-500" style="color: var(--white); width: 90%;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum.</p>
+                            <h1 class="px46" style="color: var(--white); font-weight: 800;">Agende com facilidade</h1>
+                            <p class="paragraph-size weight-500" style="color: var(--white); width: 90%;">Bem-vindo(a) à plataforma de agendamento de serviços. Utilize o botão abaixo para começar.</p>
 
                             <div class="d-grid gap-2 py-2">
                                 <a href="/agenda" class="btn btn-secondary weight-700 border-radius-30 paragraph-size" style="display: flex; align-items: center; justify-content: center; height: 3rem; align-items: center; width: 50%">Agendar</a>
@@ -107,7 +107,7 @@
                                 </div>
                                 <div style="padding: 5px 0px; display: flex;">
                                     <img src="..\css\images\info-agendar.svg">
-                                    <img style="padding-left: 20px;" src="..\css\images\info-relatar.svg">
+                                    <a href="/servicos"><img style="padding-left: 20px;" src="..\css\images\info-relatar.svg"></a>
                                 </div>
                             </div>
                         </div>
