<feat>: adicionado uma imagem de perfil padrão
- imagem de perfil padrão para quando o usuário não tenha definido uma foto de perfil, esse atributo e funcionalidade ainda não foram adicionados então não há como alterar a foto

--- a/Front-end/Pages/Ajustes.razor
+++ b/Front-end/Pages/Ajustes.razor
@@ -64,7 +64,7 @@
                                     <span class="paragraph-size weight-500" style="color: var(--black-gray);">Isso será exibido em seu perfil</span>
                                 </span>
                                 
-                                <img style="width: 5rem; height: 5rem;" src="..\\css\\images\\img-ilustrativa-edit.svg">
+                                <img class="edit-img" src="..\\css\\images\\img-perfil-padrao.svg">
                                 
                                 <div>
 
