--- a/Front-end/Pages/Inicio.razor
+++ b/Front-end/Pages/Inicio.razor
@@ -41,7 +41,7 @@
                         @if(compromissos != null){
                             @for(int i = 0; i < Math.Min(compromissos.Count, 4); i++){
                                 <div style="display: flex; padding-top: 15px">
-                                    <img src="..\\css\\images\\compromisso-ex.svg">
+                                    <img class="compromisso-img" src="..\\css\\images\\img-perfil-padrao.svg">
                                     <div style="padding-left: 15px;">
                                         <h2 class="weight-600 paragraph-size">@compromissos[i].Servico</h2>
                                         <div>
@@ -84,7 +84,7 @@
                                                     <h3 class="weight-700" style="font-size: 0.875rem; color: var(--blue-ufersa); margin: 0px; padding-bottom: 5px; text-align: left;">@servicos[i].Nome_Profissional</h3>
                                                     <p class="weight-500" style="font-size: 0.5rem; color: var(--blue-ufersa); margin: 0px;">@servicos[i].Tipo_Servico</p>
                                                 </div>
-                                                <img src="..\css\images\servico-ex.svg">
+                                                <img class="servicos-img" src="..\css\images\img-perfil-padrao.svg">
                                             </div>
                                         </div>
                                     }
@@ -95,7 +95,7 @@
                         <div style="width: 42.5rem;">
                             <h1 style="padding: 20px 20px;" class="px24 weight-700">Informações</h1>
                             <div style="display: flex; align-items: flex-start;">
-                                <img style="width: 5.5rem; height: 5.5rem;" src="..\css\images\info-ex.svg">
+                                <img class="informacao-img" src="..\css\images\img-perfil-padrao.svg">
                                 <div style="padding: 5px 5px 0px 10px;">
                                     @if(servicos != null){
                                         <h2 class="weight-600" style="font-size: 1.375rem; margin: 0; padding-bottom: 5px;">@servico_escolhido.Nome_Profissional</h2>
