--- a/Front-end/wwwroot/css/app.css
+++ b/Front-end/wwwroot/css/app.css
@@ -557,3 +557,38 @@ code {
     border-radius: 20px;
     border: none;
 }
+
+.compromisso-img{
+    width: 3.5rem;
+    height: 3.5rem;
+    border-radius: 10px;
+    box-shadow: 0px 4px 4px 0px #00000040;
+}
+
+.servicos-img{
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    box-shadow: 0px 4px 4px 0px #00000040;
+}
+
+.informacao-img{
+    width: 5.5rem; 
+    height: 5.5rem;
+    border-radius: 10px;
+    box-shadow: 0px 4px 4px 0px #00000040;
+}
+
+.servico-img{
+    width: 15rem;
+    height: 15rem;
+    border-radius: 10px;
+    box-shadow: 0px 4px 4px 0px #00000040;
+    margin-right: 35px;
+}
+
+.edit-img{
+    width: 5rem; 
+    height: 5rem;
+    border-radius: 50%;
+}
