--- a/Front-end/Layout/NavMenu.razor
+++ b/Front-end/Layout/NavMenu.razor
@@ -7,7 +7,7 @@
     <div style="padding-left: 55px;" class="pt-5 pb-4">
         <img class="nav-img" src="..\\css\\images\\img-perfil-padrao.svg" alt="">
 
-        <p class="weight-500" style="font-size: 0.75rem; color: var(--black-gray); margin-bottom: 5px;">Olá,</p>
+        <p class="weight-500" style="font-size: 0.75rem; color: var(--black-gray); margin: 5px 0px;">Olá,</p>
         <h1 class="weight-700" style="font-size: 1.375rem; color: white; text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);">Eriky <br> Veloso</h1>
     </div>
     
