<feat>: visual do pop-up de excluir conta
- também foi realizado ajustes em alguns estilos

--- a/Front-end/Pages/Recuperar_senha.razor
+++ b/Front-end/Pages/Recuperar_senha.razor
@@ -47,10 +47,10 @@
     </div>
 
     <div class="recuperar-senha-container">
-        <h1 class="recuperar-senha-h1">
+        <h1 class="pop-up-h1">
             Recuperar senha
         </h1>
-        <p class="recuperar-senha-p">
+        <p class="pop-up-p">
             Por favor, insira sua nova senha e o código de verificação enviado para seu e-mail cadastrado.
         </p>
 
