--- a/Front-end/Pages/Ajustes.razor
+++ b/Front-end/Pages/Ajustes.razor
@@ -5,8 +5,11 @@
 @inject DiscenteService DiscenteService
 @using System.Text.RegularExpressions
 @inject AuthenticationStateProvider AuthenticationStateProvider
+@inject IJSRuntime JS
 
 <PageTitle>Ajustes</PageTitle>
+
+<div id="opacidade"></div>
 
 <div class="page" style="background-color: var(--blue-ufersa); height: auto;">
     <NavMenu />
@@ -132,7 +135,7 @@
 
                     <EditForm Model="@contaUser">
                     <DataAnnotationsValidator />
-                        <div class="edit-fields">
+                        <div class="edit-fields" style="flex-wrap: wrap;">
                             <span class="paragraph-size px-2 weight-500" style="width: 12rem">Matrícula <span style="color: #BA3838">*</span></span>
                             <div class="mb-3 input-with-icon">
                                 <span class="input-icon">
@@ -142,7 +145,7 @@
                             </div>
                                 <ValidationMessage For="@(() => contaUser.Matricula)" />
                         </div>
-                        <div class="edit-fields">
+                        <div class="edit-fields" style="flex-wrap: wrap;">
                                 <span class="paragraph-size px-2 weight-500" style="width: 12rem">Email <span style="color: #BA3838">*</span></span>
                                 <div class="mb-3 input-with-icon">
                                     <svg class="input-icon" width="1.5rem" height="1.5rem" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -152,9 +155,10 @@
 
                                     <InputText id="email" class="custom-input form-control border-radius-10 my-1" style="width: 47.5rem; padding-left: 3.25rem;" @bind-Value="contaUser.Email"/>
                                 </div>
+                                <br>
                                 <ValidationMessage For="@(() => contaUser.Email)" />
                         </div>
-                        <div class="edit-fields">
+                        <div class="edit-fields" style="flex-wrap: wrap;">
                                 <span class="paragraph-size px-2 weight-500" style="width: 12rem">Senha <span style="color: #BA3838">*</span></span>
                                 <div class="mb-3 input-with-icon">
                                     <svg class="input-icon" width="1.5rem" height="1.5rem" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -170,7 +174,7 @@
                                 <span class="paragraph-size px-2 weight-500" style="width: 12rem">Excluir Perfil</span>
                                 <div style="display: flex; flex-wrap: wrap;">
                                     <span class="weight-500 paragraph-size" style="color: var(--black-gray); width: 100%;">Exclua sua conta e todos os seus dados de origem. Isso é irreversível.</span>
-                                    <button style="background-color: #D20240; color: var(--white); margin: 20px 0px;" class="button-edit">Excluir Conta</button>
+                                    <button style="background-color: #D20240; color: var(--white); margin: 20px 0px;" class="button-edit" type="button" @onclick="@(() => ToggleDisplayById("excluir-usuario"))">Excluir Conta</button>
                                 </div>
                         </div>
 
@@ -185,6 +189,25 @@
 
         </main>
 
+    </div>
+
+    <div id="excluir-usuario" class="container-excluir">
+        <h1 class="pop-up-h1">
+            Verificação
+        </h1>
+        <p class="pop-up-p pb-4">O Sistema Agendamento está a tentar excluir conta. Escreva a sua senha atual para permitir esta ação.</p>
+        <div class="password-container mb-2">
+            <InputText id="password" class="custom-input form-control border-radius-10" @bind-Value="senhaAtual" type="@(isPasswordVisible ? "text" : "password")"  placeholder="Senha"/>
+            <span class="toggle-password" @onclick="TogglePasswordVisibility">
+                <img style="height: 1.5rem; width: 1.5rem;" src="@(isPasswordVisible ? "..\\css\\images\\eye-on.svg" : "..\\css\\images\\eye-off.svg")" alt="@(isPasswordVisible ? "Esconder Senha" : "Mostrar Senha")" id="eyeIcon" />
+            </span>
+        </div>
+        <a href="/recuperar-senha" class="weight-700 paragraph-size underline">Esqueceu sua senha?</a>
+
+        <div style="display: flex; justify-content: space-between; width: 100%; padding-top: 1rem">
+            <button style="background-color: transparent; border: 2px solid #C3C3C340" class="button-senha" type="button" @onclick="@(() => ToggleDisplayById("excluir-usuario"))">Cancelar</button>
+            <button style="background-color: var(--blue-ufersa); color: var(--white); margin-left: 20px;" class="button-senha" type="submit">Confirmar</button>
+        </div>
     </div>
 
 </div>
@@ -273,6 +296,7 @@
     private Conta contaUserAtual = new Conta();
     private InfosUser infosUser = new InfosUser();
     private InfosUser infosUserAtual = new InfosUser();
+    private string senhaAtual;
 
     private async Task EditarDiscente()
     {
@@ -354,6 +378,19 @@
 
         // O primeiro nome é a primeira parte, e o sobrenome é o restante
         return (partes[0], partes[1]);
+    }
+
+    private bool isPasswordVisible = false;
+
+    private void TogglePasswordVisibility()
+    {
+        isPasswordVisible = !isPasswordVisible;
+    }
+
+    private async Task ToggleDisplayById(string id)
+    {
+        await JS.InvokeVoidAsync("toggleDisplayById", id);
+        await JS.InvokeVoidAsync("toggleDisplayById", "opacidade");
     }
 }
 
