<feat>: ajustes na apresentação dos compromissos
- foi adicionado algumas funcionalidades para ser requisitado ao banco apenas os compromissos necessários

--- a/Front-end/Layout/CalendarioDiario.razor
+++ b/Front-end/Layout/CalendarioDiario.razor
@@ -81,7 +81,7 @@
 
         int userId = await ((CustomAuthStateProvider)AuthenticationStateProvider).GetUserIdFromLocalStorage();
         if(userId != -1){
-            compromissos = await AgendamentoService.GetCompromissosDiscente(userId);
+            compromissos = await AgendamentoService.GetCompromissosDiscenteHoje(userId);
         }
 
         if (compromissos != null && compromissos.Count > 0){
