--- a/Front-end/Layout/Calendario.razor
+++ b/Front-end/Layout/Calendario.razor
@@ -80,34 +80,38 @@
     </div>
     } else if(Navigation.ToBaseRelativePath(Navigation.Uri) == "agenda")
     {
-        @if(compromissos != null){
-            @for (int i = 0; i < Math.Min(compromissos.Count, 4); i++)
+        @if(compromissosSemanais != null){
+            @for (int i = 0; i < Math.Min(compromissosSemanais.Count, 4); i++)
             {
+                Console.WriteLine(compromissosSemanais[i].Data.Date);
+                Console.WriteLine(DataAtual);
                 var cor= "";
-                @if(compromissos[i].Servico == "Psicóloga" || compromissos[i].Servico == "Psicólogo" || compromissos[i].Servico == "Psicóloga(o)" || compromissos[i].Servico == "Psicólogo(a)"){
+                @if(compromissosSemanais[i].Servico == "Psicóloga" || compromissosSemanais[i].Servico == "Psicólogo" || compromissosSemanais[i].Servico == "Psicóloga(o)" || compromissosSemanais[i].Servico == "Psicólogo(a)"){
                     cor = "#F884D7";
-                } else if(compromissos[i].Servico == "Pedagoga" || compromissos[i].Servico == "Pedagogo" || compromissos[i].Servico == "Pedagoga(o)" || compromissos[i].Servico == "Pedagogo(a)"){
+                } else if(compromissosSemanais[i].Servico == "Pedagoga" || compromissosSemanais[i].Servico == "Pedagogo" || compromissosSemanais[i].Servico == "Pedagoga(o)" || compromissosSemanais[i].Servico == "Pedagogo(a)"){
                     cor = "#95BBF8";
-                } else if(compromissos[i].Servico == "Nutricionista"){
+                } else if(compromissosSemanais[i].Servico == "Nutricionista"){
                     cor = "#D6F894";
-                } else if(compromissos[i].Servico == "Educador Físico" || compromissos[i].Servico == "Educadora Física"){
+                } else if(compromissosSemanais[i].Servico == "Educador Físico" || compromissosSemanais[i].Servico == "Educadora Física"){
                     cor = "#F6C4AF";
                 }
                 <div>
-                    @if (DataCompromisso.Date != compromissos[i].Data.Date)
-                    {
-                        Console.WriteLine(DataCompromisso.Date);
-                        DataCompromisso = compromissos[i].Data;
-                        <h1 class="weight-700" style="color: var(--white); font-size: 1rem; margin: 0; padding-top: 10px;">@ObterTituloData(DataCompromisso)</h1>
-                        <span class="weight-500" style="font-size: 0.75rem; color: var(--black-gray);">@DataCompromisso.ToString("dd/MM/yyyy")</span>
+                    @if(compromissosSemanais[i].Data.Date >= DataAtual){
+                        @if (DataCompromisso.Date != compromissosSemanais[i].Data.Date)
+                        {
+                            DataCompromisso = compromissosSemanais[i].Data;
+                            <h1 class="weight-700" style="color: var(--white); font-size: 1rem; margin: 0; padding-top: 10px;">@ObterTituloData(DataCompromisso)</h1>
+                            <span class="weight-500" style="font-size: 0.75rem; color: var(--black-gray);">@DataCompromisso.ToString("dd/MM/yyyy")</span>
+                        }
+                        <div style="padding: 15px;">
+                            <span style="display: flex; align-items: center; font-size: 0.688rem; color: var(--white);">
+                                <div style="width: 0.75rem; height: 0.75rem; background-color: @cor; border-radius: 50%; padding-top: 10px; margin-right: 10px;"></div>
+                                @(($"{(@compromissosSemanais[i].HoraInicio.Hours % 12):D2}:{@compromissosSemanais[i].HoraInicio.Minutes:D2} {( @compromissosSemanais[i].HoraInicio.Hours >= 12 ? "PM" : "AM") }")) - @(($"{(@compromissosSemanais[i].HoraFim.Hours % 12):D2}:{@compromissosSemanais[i].HoraFim.Minutes:D2} {( @compromissosSemanais[i].HoraFim.Hours >= 12 ? "PM" : "AM") }"))
+                            </span>
+                            <span style="font-size: 0.75rem; padding-left: 0.75rem; margin-left: 10px; color: var(--black-gray);">@compromissosSemanais[i].Servico - @compromissosSemanais[i].Profissional_Nome</span>
+                        </div>
+                        
                     }
-                    <div style="padding: 15px;">
-                        <span style="display: flex; align-items: center; font-size: 0.688rem; color: var(--white);">
-                            <div style="width: 0.75rem; height: 0.75rem; background-color: @cor; border-radius: 50%; padding-top: 10px; margin-right: 10px;"></div>
-                            @(($"{(@compromissos[i].HoraInicio.Hours % 12):D2}:{@compromissos[i].HoraInicio.Minutes:D2} {( @compromissos[i].HoraInicio.Hours >= 12 ? "PM" : "AM") }")) - @(($"{(@compromissos[i].HoraFim.Hours % 12):D2}:{@compromissos[i].HoraFim.Minutes:D2} {( @compromissos[i].HoraFim.Hours >= 12 ? "PM" : "AM") }"))
-                        </span>
-                        <span style="font-size: 0.75rem; padding-left: 0.75rem; margin-left: 10px; color: var(--black-gray);">@compromissos[i].Servico - @compromissos[i].Profissional_Nome</span>
-                    </div>
                 </div>
             }
 
@@ -126,25 +130,32 @@
     private string HeightClass { get; set; } = "";
 
     private List<CompromissoModel> compromissos;
+    private List<CompromissoModel> compromissosSemanais;
 
     protected override async Task OnInitializedAsync()
     {
 
         int userId = await ((CustomAuthStateProvider)AuthenticationStateProvider).GetUserIdFromLocalStorage();
-        if(userId != -1){
-            compromissos = await AgendamentoService.GetCompromissosDiscente(userId);
-        }
 
-        DataCompromisso = compromissos[0].Data.AddDays(-1);
         
-        GerarCalendario(DataAtual);
         var relativePath = Navigation.ToBaseRelativePath(Navigation.Uri);
         if (relativePath == "inicio")
         {
+            if(userId != -1){
+                compromissos = await AgendamentoService.GetCompromissosDiscente(userId);
+            }
             HeightClass = "";
         } else{
+            if(userId != -1){
+                compromissosSemanais = await AgendamentoService.GetCompromissosDiscenteSemanaAtual(userId);
+                compromissosSemanais = compromissosSemanais
+                .Where(compromisso => compromisso.Data.Date >= DateTime.Today)
+                .ToList();
+            }
+            DataCompromisso = compromissosSemanais[0].Data.AddDays(-1);
             HeightClass = "calendario-services-height";
         }
+        GerarCalendario(DataAtual);
     }
 
     private void GerarCalendario(DateTime date)
